[package]
name = "consul-oxide"
version = "0.5.0"
edition = "2021"
authors = ["Kaylen Dart <https://github.com/kaylendog>"]
description = "An asynchronous Rust client for Consul's HTTP API."
documentation = "https://docs.rs/consul-oxide/"
repository = "https://github.com/kaylendog/consul-oxide"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["consul", "discovery"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1"
url = "2.1"
